Made visualizer scrollable and fixed bug where visualizer and debugger both visible

--- a/main.css
+++ b/main.css
@@ -257,6 +257,7 @@
   #viz-canvas-area {
     width: 568px;
     height: 650px;
+    overflow-x: scroll;
   }
 
   #run-viz-speed-label {
